# Smart_Guitar_Amp

./: .gitignore  README.md
data/schematics/KiCad/: SF4.kicad_sch
data/schematics/LTSpice/: MCP6001.asc  variable_gain_amplifier.asc
firmware/tests/Optocoupler_Test/: Optocoupler_Test.ino
schematics/KiCad/: SF4.kicad_pro  SF4.kicad_sch
schematics/KiCad/SF4/: SF4.kicad_prl  ~SF4.kicad_sch.lck
schematics/LTSpice/: Full_Circuit.asc  audio_output_stage.asc  filter.asc  input_buffer.asc  variable_gain_amplifier.asc  vbias_and_input_buffer.asc
src/DSP_Pipeline/: DSP_Pipeline.ino  README.md
src/PWM_Audio_Passthrough/: DESIGN_NOTES.md
src/host/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  sf4_serial.py
src/host/app/: __init__.py  main.py  models.py  serial_link.py  tone_engine.py
src/host/app/static/: app.js  index.html  style.css
src/host/web/src/: App.jsx  ampParams.js  styles.css
src/host/web/src/components/: Chat.jsx  ControlPanel.jsx  TelemetryStrip.jsx  TunerDisplay.jsx
src/host/web/src/hooks/: useTelemetry.js
